feat: AI credits, spaced repetition, auto mastery, sandbox hardening
- AI Credit system: wallet with 10 free credits per user, deduct on
  review/hint/detect, GET /api/ai/wallet endpoint; replaces rate limiter
- Spaced repetition (SM-2): schedule review 1 day after first solve,
  subsequent intervals 1/3/7/14/30 days; GET /api/users/me/reviews/today
  and POST /api/users/me/reviews/{problemId}/complete
- Real mastery calculation: auto-score from solve history (attempts +
  hints penalty), auto-status NOT_STARTED/LEARNING/PRACTICED/MASTERED;
  recalculates on every ACCEPTED submission
- Execution sandbox: -Xmx64m/-Xss512k JVM limits, 64KB output cap,
  cap_drop ALL + no-new-privileges, CPU 0.5/memory 256M container limits
- Flyway V6 migration for all new tables + seeds existing users with wallets